--- a/simple-gan.ipynb
+++ b/simple-gan.ipynb
@@ -230,7 +230,7 @@
     "\n",
     "The generator is trained to fool the discriminator by generating data as similar as possible to the real data. \n",
     "\n",
-    "The generators weights $w$ are updated as to **maximize** the probability $D(G(z))$ that any **fake** data $G(z)$ is classified by the discriminator as belonging to the **real** dataset.\n",
+    "The generators weights $v$ are updated as to **maximize** the probability $D(G(z))$ that any **fake** data $G(z)$ is classified by the discriminator as belonging to the **real** dataset.\n",
     "\n",
     "![GAN Generator](images/gan-generator.svg)\n",
     "\n",
@@ -531,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
